--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "actividad1-bckend",
   "version": "1.0.0",
   "description": "",
-  "main": "actividad-N1.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
